--- a/style.css
+++ b/style.css
@@ -10,7 +10,11 @@
 .grid div {
     height: 20px;
     width: 20px;
-    
-    background-color: red;
 
+    /* background-color: red; */
+
+}
+
+.tetromino {
+    background-color: blue;
 }
