--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.container {
+    display: flex;
+}
+
+
 .grid {
     width: 200px;
     height: 400px;
@@ -17,4 +22,19 @@
 
 .tetromino {
     background-color: blue;
+}
+
+.mini-grid {
+    margin-left: 50px;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    flex-wrap: wrap;
+
+    background-color: yellow;
+}
+
+.mini-grid div {
+    height: 20px;
+    width: 20px;
 }
